--- a/app/views/application/_ilanikinciel.html.erb
+++ b/app/views/application/_ilanikinciel.html.erb
@@ -1,14 +1,14 @@
-<h4  class="add-to item_price">Fiyat: <span style="color:red;" ><%= @advert.price %>&#8378;</span></h4>
+<h4  class="add-to item_price">Fiyat: <span style="color:#4DACC9;;" ><%= @advert.price %>&#8378;</span></h4>
 <br>
 
-<h4  class="add-to item_price">Ürün Rengi: <span style="color:red;" ><%= @advertable.color %></span></h4>
+<h4  class="add-to item_price">Ürün Rengi: <span style="color:#4DACC9;;" ><%= @advertable.color %></span></h4>
 <br>
 
-<h4  class="add-to item_price">Marka: <span style="color:red;" ><%= @advertable.brand %></span></h4>
+<h4  class="add-to item_price">Marka: <span style="color:#4DACC9;;" ><%= @advertable.brand %></span></h4>
 <br>
 
-<h4  class="add-to item_price">Kullanım Durumu: <% if @advertable.usage %> <span style="color:red;" >Sıfır</span> <% else %> <span style="color:red;" >İkinci El</span> <% end %> </h4>
+<h4  class="add-to item_price">Kullanım Durumu: <% if @advertable.usage %> <span style="color:#4DACC9;;" >Sıfır</span> <% else %> <span style="color:#4DACC9;;" >İkinci El</span> <% end %> </h4>
 <br>
 
-<h4  class="add-to item_price">Garanti Durumu: <% if @advertable.warranty %> <span style="color:red;" >Var</span> <% else %> <span style="color:red;" >Yok</span> <% end %> </h4>
+<h4  class="add-to item_price">Garanti Durumu: <% if @advertable.warranty %> <span style="color:#4DACC9;" >Var</span> <% else %> <span style="color:#4DACC9;;" >Yok</span> <% end %> </h4>
 <br>
