--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -549,7 +549,7 @@
 
 										<div class="thumbnail">
 											<a href="<%= advert.href %>"> 
-											<%= image_tag advert.pimage.imagefile(:small),title:advert.name,class: "masterTooltip" %>
+											<%= image_tag advert.pimage.imagefile(:small) %>
 											</a>
 
 										</div>
