--- a/app/views/application/_ilankategoriler.html.erb
+++ b/app/views/application/_ilankategoriler.html.erb
@@ -4,64 +4,64 @@
 
 	<ul class="menu-drop">
 		<li class="item1">
-			<a href="#">İkinci El İlan </a>
+			<a href="#">-İkinci El İlan </a>
 			<ul class="cute">
 				<li class="subitem1">
-					<a href="/kategoriler/ikincielilan/beyazesya">Beyaz Eşya </a>
+					<a href="/kategoriler/ikincielilan/beyazesya">-Beyaz Eşya </a>
 				</li>
 				<li class="subitem2">
-					<a href="/kategoriler/ikincielilan/dersnotu">Ders Notu </a>
+					<a href="/kategoriler/ikincielilan/dersnotu">-Ders Notu </a>
 				</li>
 				<li class="subitem3">
-					<a href="/kategoriler/ikincielilan/elektronik">Elektronik </a>
+					<a href="/kategoriler/ikincielilan/elektronik">-Elektronik </a>
 				</li>
 				<li class="subitem4">
-					<a href="/kategoriler/ikincielilan/evdekorasyonu">Ev Dekorasyonu </a>
+					<a href="/kategoriler/ikincielilan/evdekorasyonu">-Ev Dekorasyonu </a>
 				</li>
 				<li class="subitem5">
-					<a href="/kategoriler/ikincielilan/giyim">Giyim </a>
+					<a href="/kategoriler/ikincielilan/giyim">-Giyim </a>
 				</li>
 				<li class="subitem6">
-					<a href="/kategoriler/ikincielilan/kirtasiye">Kırtasiye </a>
+					<a href="/kategoriler/ikincielilan/kirtasiye">-Kırtasiye </a>
 				</li>
 				<li class="subitem7">
-					<a href="/kategoriler/ikincielilan/mutfakesyalari">Mutfak Eşyaları </a>
+					<a href="/kategoriler/ikincielilan/mutfakesyalari">-Mutfak Eşyaları </a>
 				</li>
 				<li class="subitem8">
-					<a href="/kategoriler/ikincielilan/muzikaletleri">Müzik Aletleri </a>
+					<a href="/kategoriler/ikincielilan/muzikaletleri">-Müzik Aletleri </a>
 				</li>
 				<li class="subitem9">
-					<a href="/kategoriler/ikincielilan/vasita">Vasıta </a>
+					<a href="/kategoriler/ikincielilan/vasita">-Vasıta </a>
 				</li>
 				<li class="subitem10">
-					<a href="/kategoriler/ikincielilan/diger">Diğer </a>
+					<a href="/kategoriler/ikincielilan/diger">-Diğer </a>
 				</li>
 			</ul>
 		</li>
-		<li class="item2">
-			<a href="/kategoriler/evarkadasi">Ev Arkadaşı </a>
+		<li onclick="javascript:void(0);location.href = '/kategoriler/evarkadasi';" class="item2">
+			<a href="/kategoriler/evarkadasi">-Ev Arkadaşı </a>
 			
 		</li>
 		<li class="item4">
-			<a href="#">Özel Ders</a>
+			<a href="#">-Özel Ders</a>
 			<ul class="cute">
 				<li class="subitem1">
-					<a href="/kategoriler/ozelders/matematik">Matematik </a>
+					<a href="/kategoriler/ozelders/matematik">-Matematik </a>
 				</li>
 				<li class="subitem2">
-					<a href="/kategoriler/ozelders/fizik">Fizik</a>
+					<a href="/kategoriler/ozelders/fizik">-Fizik</a>
 				</li>
 				<li class="subitem3">
-					<a href="/kategoriler/ozelders/kimya">Kimya</a>
+					<a href="/kategoriler/ozelders/kimya">-Kimya</a>
 				</li>
 				<li class="subitem3">
-					<a href="/kategoriler/ozelders/biyoloji">Biyoloji</a>
+					<a href="/kategoriler/ozelders/biyoloji">-Biyoloji</a>
 				</li>
 				<li class="subitem3">
-					<a href="/kategoriler/ozelders/genelmuhendislik">Mühendislik</a>
+					<a href="/kategoriler/ozelders/genelmuhendislik">-Mühendislik</a>
 				</li>
 				<li class="subitem3">
-					<a href="/kategoriler/ozelders/genelegitimbilimleri">Eğitim Bilimleri</a>
+					<a href="/kategoriler/ozelders/genelegitimbilimleri">-Eğitim Bilimleri</a>
 				</li>
 			</ul>
 		</li>
