--- a/app/views/application/_ilanikinciel.html.erb
+++ b/app/views/application/_ilanikinciel.html.erb
@@ -1,7 +1,7 @@
 <h4  class="add-to item_price">Fiyat: <span style="color:#4DACC9;;" ><%= @advert.price %>&#8378;</span></h4>
 <br>
 
-<h4  class="add-to item_price">Ürün Rengi: <span style="color:#4DACC9;;" ><%= @advertable.color %></span></h4>
+<h4  class="add-to item_price">Ürün Rengi: <span style="color:#4DACC9;;" ><%= @advertable.renkler %></span></h4>
 <br>
 
 <h4  class="add-to item_price">Marka: <span style="color:#4DACC9;;" ><%= @advertable.brand %></span></h4>
