--- a/app/views/application/_headerfixed.html.erb
+++ b/app/views/application/_headerfixed.html.erb
@@ -1,4 +1,4 @@
-<% if ENV['RAILS_ENV'].to_s == 'development' %>
+<% if current_user && current_user.role == 'admin' %>
 	Page Rendered in <%= sprintf('%.3f', (Time.now.to_f - @start_time) ) %> seconds
 <% end %>
 
